--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "workbox-webpack-plugin": "6.5.4"
   },
   "dependencies": {
+    "babel-jest": "^29.3.0",
     "bootstrap": "5.2.2",
     "css-loader": "6.7.1",
+    "jest-environment-jsdom": "^29.3.0",
     "style-loader": "3.3.1"
   }
 }
