--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,8 @@
   "env": {},
   "ignore": [],
   "plugins": [],
-  "presets": ["@babel/preset-env"]
+  "presets": [
+    ["@babel/preset-env", {"targets": {"node": "current"}}],
+    "@babel/preset-typescript"
+  ]
 }
