--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,17 @@
         "browser": true,
         "es2021": true
     },
-    "extends": "eslint:recommended",
-    "overrides": [
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "@typescript-eslint"
     ],
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
@@ -26,6 +34,7 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "@typescript-eslint/ban-ts-comment": 0
     }
 }
