--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "My webpack project",
   "main": "index.js",
+  "types": "./src/index.d.ts",
   "scripts": {
     "test": "jest",
+    "lint": "eslint . --ext .ts",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
@@ -25,15 +27,19 @@
   },
   "homepage": "https://github.com/robbryandev/sudoku-checker#readme",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "@webpack-cli/generators": "2.5.0",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-init": "^0.2.0",
-    "eslint": "8.27.0",
+    "eslint": "^8.27.0",
     "html-webpack-plugin": "5.5.0",
     "jest": "29.3.0",
     "prettier": "2.7.1",
     "prettier-init": "1.3.0",
+    "ts-loader": "^9.4.1",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.11.1",
