--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,9 @@
             "error",
             "always"
         ],
-        "@typescript-eslint/ban-ts-comment": 0
+        "@typescript-eslint/ban-ts-comment": 0,
+        "@typescript-eslint/no-this-alias": 0,
+        "@typescript-eslint/no-non-null-assertion": 0,
+        "@typescript-eslint/no-explicit-any": 0
     }
 }
