--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-init": "^0.2.0",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.27.0",
     "html-webpack-plugin": "5.5.0",
     "jest": "29.3.0",
